// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSandboxSpec > snapshot covers the full Job spec for the sandbox profile 1`] = `
{
  "apiVersion": "batch/v1",
  "kind": "Job",
  "metadata": {
    "labels": {
      "app": "mcp-server",
      "archestra.ai/conversation-id": "conv-123",
      "archestra.ai/runtime": "sandbox",
      "mcp-server-id": "srv-456",
      "mcp-server-name": "code-sandbox",
    },
    "name": "sandbox-job-conv-123",
  },
  "spec": {
    "activeDeadlineSeconds": 86400,
    "backoffLimit": 0,
    "template": {
      "metadata": {
        "labels": {
          "app": "mcp-server",
          "archestra.ai/conversation-id": "conv-123",
          "archestra.ai/runtime": "sandbox",
          "mcp-server-id": "srv-456",
          "mcp-server-name": "code-sandbox",
        },
      },
      "spec": {
        "automountServiceAccountToken": false,
        "containers": [
          {
            "env": [
              {
                "name": "IDLE_TIMEOUT_SECONDS",
                "value": "900",
              },
            ],
            "image": "registry.example.com/sandbox:1.0.0",
            "imagePullPolicy": undefined,
            "livenessProbe": {
              "failureThreshold": 3,
              "initialDelaySeconds": 15,
              "periodSeconds": 30,
              "tcpSocket": {
                "port": 8080,
              },
              "timeoutSeconds": 5,
            },
            "name": "sandbox",
            "ports": [
              {
                "containerPort": 8080,
                "name": "mcp",
                "protocol": "TCP",
              },
              {
                "containerPort": 7681,
                "name": "tty",
                "protocol": "TCP",
              },
            ],
            "resources": {
              "limits": {
                "cpu": "2",
                "memory": "2Gi",
              },
              "requests": {
                "cpu": "250m",
                "memory": "512Mi",
              },
            },
            "securityContext": {
              "allowPrivilegeEscalation": false,
              "capabilities": {
                "drop": [
                  "ALL",
                ],
              },
              "readOnlyRootFilesystem": true,
            },
            "volumeMounts": [
              {
                "mountPath": "/tmp",
                "name": "tmp",
              },
              {
                "mountPath": "/var/run",
                "name": "var-run",
              },
              {
                "mountPath": "/workspace",
                "name": "workspace",
              },
            ],
          },
        ],
        "enableServiceLinks": false,
        "restartPolicy": "Never",
        "securityContext": {
          "appArmorProfile": {
            "type": "RuntimeDefault",
          },
          "fsGroup": 1000,
          "fsGroupChangePolicy": "OnRootMismatch",
          "runAsGroup": 1000,
          "runAsNonRoot": true,
          "runAsUser": 1000,
          "seccompProfile": {
            "type": "RuntimeDefault",
          },
        },
        "serviceAccountName": "mcp-sandbox-no-rbac",
        "terminationGracePeriodSeconds": 10,
        "volumes": [
          {
            "emptyDir": {},
            "name": "tmp",
          },
          {
            "emptyDir": {},
            "name": "var-run",
          },
          {
            "name": "workspace",
            "persistentVolumeClaim": {
              "claimName": "sandbox-pvc-conv-123",
            },
          },
        ],
      },
    },
    "ttlSecondsAfterFinished": 0,
  },
}
`;

exports[`generateSandboxSpec > snapshot covers the full Job spec for the sandbox profile 2`] = `
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "labels": {
      "app": "mcp-server",
      "archestra.ai/conversation-id": "conv-123",
      "archestra.ai/runtime": "sandbox",
      "mcp-server-id": "srv-456",
      "mcp-server-name": "code-sandbox",
    },
    "name": "sandbox-svc-conv-123",
  },
  "spec": {
    "ports": [
      {
        "name": "mcp",
        "port": 8080,
        "protocol": "TCP",
        "targetPort": 8080,
      },
      {
        "name": "tty",
        "port": 7681,
        "protocol": "TCP",
        "targetPort": 7681,
      },
    ],
    "selector": {
      "app": "mcp-server",
      "archestra.ai/conversation-id": "conv-123",
      "archestra.ai/runtime": "sandbox",
    },
    "type": "ClusterIP",
  },
}
`;

exports[`generateSandboxSpec > snapshot covers the full Job spec for the sandbox profile 3`] = `
{
  "apiVersion": "v1",
  "kind": "PersistentVolumeClaim",
  "metadata": {
    "labels": {
      "app": "mcp-server",
      "archestra.ai/conversation-id": "conv-123",
      "archestra.ai/runtime": "sandbox",
      "mcp-server-id": "srv-456",
      "mcp-server-name": "code-sandbox",
    },
    "name": "sandbox-pvc-conv-123",
  },
  "spec": {
    "accessModes": [
      "ReadWriteOnce",
    ],
    "resources": {
      "requests": {
        "storage": "10Gi",
      },
    },
  },
}
`;
